update profile endpoint
